Bug 156614 - A11Y sidebar: not clickable warning about fake forms
Summary: A11Y sidebar: not clickable warning about fake forms
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-08-04 17:56 UTC by Gabor Kelemen (Collabora)
Modified: 2023-08-11 14:02 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-08-04 17:56:39 UTC
attachment 188740 [details] has a "fake form", line of dots.
The accessibility sidebar gives a warning about this, but no hyperlink to highlight the issue.
Screenshot is attachment 188741 [details]

1. Open attached file
2. Open the Accessibility sidebar
3. Observe the warning "An input form is not interactive."
-> Should have a Fix button to open the Page style properties dialog

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eff5a3fe98ca5d1d28c4f5386c4af8a3be8f5703
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-08-04 18:00:15 UTC
Ah, not the copypaste... 
So the expected result is a clickable warning text in the sidebar, highlighting the problematic paragraph.
Comment 2 Commit Notification 2023-08-10 06:07:43 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7c8c71ecf7dc3d86ebe783de8f4886c0d8b896f0

tdf#156614 - A11Y - fix not clickable warning about fake forms

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-08-10 08:49:07 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/750f60174ea0dacf1cf007cd67eb70acd83fe649

Related tdf#156614 Improve wording of non-interactive forms text

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-08-11 14:02:12 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/2b2285f70bcc85ae26ad12b75859dae8800c6662

tdf#156614 - A11Y - fix not clickable warning about fake forms

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.