tdf#156614 - A11Y - fix not clickable warning about fake forms

Make the warning message clickable and select the text.

Change-Id: I5b503ba278980c128bbef83631dabc897bb33b14
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155519
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>